# TwitterBot

./: .gitignore  Dockerfile  README.md  apt.txt  boinc_notifier.py  boinc_result_to_tex.py  boinc_result_to_tweet.py  bot.py  demo.ipynb  generate_boinc_result_previews.py  get_boinc_results.py  notified_results.json  pyproject.toml  render_preview.py  requirements.txt  run.py
.github/workflows/: mail.yaml  tweet.yaml
queue/: 17_07_22.json  first.json
twitter_bot/: README.md  all_boinc_results.json  all_results.md  boinc_notifier.py  boinc_result_to_tex.py  bot.py  render_preview.py  result_unifier.py
